# kpi_vladik_L2

./: Dockerfile  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  donk.h  main.cpp
.deps/: HTTP_Server.Po  main.Po
.github/workflows/: c-cpp.yml  tarball.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
deb/DEBIAN/: control
deb/usr/local/share/man/man1/: donk.1
kpi_vladik_L2.git/: COMMIT_EDITMSG  HEAD  config  index  packed-refs
kpi_vladik_L2.git/logs/: HEAD
kpi_vladik_L2.git/logs/refs/heads/: branchA  hotfix  master
kpi_vladik_L2.git/logs/refs/remotes/origin/: HEAD  branchA  hotfix  master
kpi_vladik_L2.git/objects/pack/: pack-4946140367b769fb328cb8a7b1ce3242fc7f15fb.idx  pack-4946140367b769fb328cb8a7b1ce3242fc7f15fb.pack  pack-4946140367b769fb328cb8a7b1ce3242fc7f15fb.rev
kpi_vladik_L2.git/refs/heads/: branchA  hotfix
tests/: Makefile  Makefile.am  Makefile.in  donktest1  main.cpp  servertest.cpp
tests/.deps/: main.Po  servertest.Po  test.Po
